<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filter_root"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/max_cost_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_cost_label"
        android:layout_alignParentLeft="true"
        android:textSize="17dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="12dp"
        android:layout_alignParentTop="true"/>
    <SeekBar
        android:id="@+id/max_cost_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/max_cost_label"
        android:layout_marginTop="16dp"
        android:progressTint="@color/primaryLight"
        android:thumbTint="@color/primaryLight"
        android:max="40"
        android:progress="10"/>
    <TextView
        android:id="@+id/party_size_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/max_cost_seekbar"
        android:layout_alignParentLeft="true"
        android:textSize="17dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="12dp"
        android:text="@string/party_size_label"/>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/party_size_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/party_size_label"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:baselineAligned="false">
        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="1"
            android:background="@drawable/button_background"
            android:padding="6dp"
            android:minHeight="1dp"
            android:minWidth="1dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="6dp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:minHeight="1dp"
            android:minWidth="1dp"
            android:padding="6dp"
            android:text="2" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:minHeight="1dp"
            android:minWidth="1dp"
            android:padding="6dp"
            android:text="small group" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:minHeight="1dp"
            android:minWidth="1dp"
            android:padding="6dp"
            android:text="big group" />
    </LinearLayout>
    <TextView
        android:id="@+id/max_distance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_distance_label"
        android:layout_alignParentLeft="true"
        android:textSize="17dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="12dp"
        android:layout_below="@id/party_size_buttons"/>
    <SeekBar
        android:id="@+id/max_distance_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/max_distance_label"
        android:layout_marginTop="16dp"
        android:progressTint="@color/primaryLight"
        android:thumbTint="@color/primaryLight"
        android:max="7"
        android:progress="3"/>
    <TextView
        android:id="@+id/max_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/max_distance_seekbar"
        android:layout_alignParentLeft="true"
        android:textSize="17dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="12dp"
        android:text="@string/max_time_label"/>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/time_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/max_time_label"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:baselineAligned="false">
        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="1/2"
            android:background="@drawable/button_background"
            android:padding="6dp"
            android:minHeight="1dp"
            android:minWidth="1dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="6dp"
            android:onClick="partySize"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="1"
            android:background="@drawable/button_background"
            android:padding="6dp"
            android:minHeight="1dp"
            android:minWidth="1dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="6dp"
            android:onClick="partySize"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="2"
            android:background="@drawable/button_background"
            android:padding="6dp"
            android:minHeight="1dp"
            android:minWidth="1dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="6dp"
            android:onClick="partySize"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="3-4"
            android:background="@drawable/button_background"
            android:padding="6dp"
            android:minHeight="1dp"
            android:minWidth="1dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="6dp"
            android:onClick="partySize"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="5+"
            android:background="@drawable/button_background"
            android:padding="6dp"
            android:minHeight="1dp"
            android:minWidth="1dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="6dp"
            android:onClick="partySize"/>
    </LinearLayout>
    <CheckBox
        android:id="@+id/indoor_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/time_buttons"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="12dp"
        android:textSize="20sp"
        android:text="@string/indoor"
        android:buttonTint="@color/primary"/>
    <CheckBox
        android:id="@+id/outdoor_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/indoor_check"
        android:layout_below="@id/time_buttons"
        android:layout_marginTop="17dp"
        android:textSize="20sp"
        android:text="@string/outdoor"
        android:buttonTint="@color/primary"/>
</RelativeLayout>