<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/activity_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter" />
    <TextView
        android:id="@+id/activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/activity_photo"
        android:textSize="23dp"
        android:textStyle="bold"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="12dp"/>
    <TextView
        android:id="@+id/activity_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/activity_title"
        android:textSize="17sp"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginRight="-2dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:background="@drawable/top_and_bottom_border"/>
    <TextView
        android:id="@+id/activity_cost_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_description"
        android:text="@string/cost_label"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="12dp" />
    <TextView
        android:id="@+id/activity_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/activity_description"
        android:textSize="17sp"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="130dp"/>
    <TextView
        android:id="@+id/activity_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_time_label_info"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/activity_cost_label"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="12dp"/>
    <TextView
        android:id="@+id/activity_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="130dp"
        android:layout_below="@+id/activity_cost_label"
        android:textSize="17sp"
        android:layout_marginTop="11dp"/>
    <TextView
        android:id="@+id/activity_location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_label"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="11dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/activity_time"/>
    <TextView
        android:id="@+id/activity_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="130dp"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="12dp"
        android:layout_below="@+id/activity_time"
        android:layout_marginBottom="16dp"/>
    <!--<Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/directions"
        android:onClick="displayDirections" />-->

</RelativeLayout>